--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/adminStyle.css">
     <link rel="stylesheet" href="assets/css/skins/skin-demo-22.css">
     <link rel="stylesheet" href="assets/css/demos/demo-22.css">
 
